<resources>
    <string name="app_name">HAppY</string>
    <string name="title_home">Home</string>
    <string name="title_happy_list">Happy List</string>
    <string name="title_ideas">Idea List</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_add_happy">Happy List</string>

    <string name="Save">Save</string>
    <string name="button_show_happy_list">Show me list of happy things</string>
    <string name="button_show_ideas">Show me list of ideas</string>

    <string name="question_are_you_happy">Are you happy?</string>
    <string name="happy">Happy</string>
    <string name="unhappy">Not happy</string>

    <string name="text_what_made_you_happy">What made you happy?</string>
    <string name="text_what_made_you_happy_add_more">Do you want to add more things that made you happy?</string>
    <string name="text_what_made_you_happy_what_else">What else made you happy?</string>
    <string name="question_what">What did you do?</string>
    <string name="question_with">With whom?</string>
    <string name="question_where">Where?</string>
    <string name="text_today">Today</string>
    <string name="button_change_date">Change date</string>
    <string name="additional_information">Additional information</string>

    <string name="text_what_might_make_you_happy">What might make you happy?</string>
    <string name="idea">Idea</string>
    <string name="add_idea_btn">Add an idea of what might make you happy</string>

    <string name="sure_to_delete_this_idea">Are you sure that you want to delete this idea?</string>
    <string name="sure_to_delete_this_happy_thing">Are you sure that you want to delete this happy thing?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete item</string>
    <string name="change">Change item</string>
    <string name="Change_or_delete_item_question">Do you want to delete or change this item?</string>
    <string name="idea_deleted">Idea deleted</string>
    <string name="happy_deleted">Happy thing deleted</string>
    <string name="idea_updated">Idea updated</string>
    <string name="happy_updated">Happy thing updated</string>
    <string name="swipe_left_to_delete_and_right_to_change_this_entry">Swipe left to delete and right to change this entry</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="happy_thing">Happy Thing</string>

    <string name="text_not_happy_sorry">"I'm sorry that you had a bad day!"</string>
    <string name="alert_too_many_unhappy_days_part_just_too_many">"It's been too many days in a row that you are not happy.\nPlease check out the list of things and ideas on what you can do to change this!</string>
    <string name="alert_too_many_unhappy_days_part1">"It's been</string>
    <string name="alert_too_many_unhappy_days_part2">"days in a row that you are not happy.\nPlease check out the list of things and ideas on what you can do to change this!</string>
    <string name="alert_too_many_unhappy_days_part1_singular">"It's been</string>
    <string name="alert_too_many_unhappy_days_part2_singular">"day in a row that you are not happy.\nPlease check out the list of things and ideas on what you can do to change this!</string>
    <string name="title_activity_bottom_navigation_test">MainActivity</string>


    <string name="sort_by_question">What do you want to show in the list?</string>
    <string name="sort_by">Show</string>
    <string name="and">and</string>
    <string name="what">What</string>
    <string name="where">Where</string>
    <string name="with_whom">With whom</string>
    <string name="date">Date</string>

    <string name="empty_list">This list is still empty</string>

    <string name="ask_if_happy_at">Ask me if I am happy at </string>
    <string name="timer_header">Notification</string>
    <string name="daily_notification">Daily Notification</string>
    <string name="timer">Do you want a daily notification?</string>
    <string name="notification_time">Notification set at \ </string>
    <string name="notification_click_to_change">Click button to change time</string>
    <string name="notification_off">Notification turned off</string>
    <string name="notification_on">Notification turned on</string>
    <string name="notification_off_hint">Turn on the notification to select a time</string>

    <string name="channel_name_daily_notification">Daily notification</string>
    <string name="channel_name_alert_unhappy">Unhappy notification</string>
    <string name="channel_description_daily_notification">Ask once a day if you are happy</string>
    <string name="channel_description_alert_unhappy">Alert if you were unhappy too many days in a row</string>

    <string name="toast_today_saved_as_unhappy">Today was saved as an unhappy day</string>
    <string name="toast_saved">Saved</string>

    <string name="about_header">About</string>
    <string name="about_copyright">Copyright @ Lana L. Blaschke</string>
    <string name="about_summary">Hey, I did that! I hope it will help you to find out what makes you happy and thus to lead a content and satisfied life.
    \nI build this app with the greatest diligence and good intents, but I cannot guarantee for anything. So be warned that it might break your phone, make you less happy, or what so ever.
    If you have any feedback or want to send me a virtual hug, feel free to do so (lblaschke@posteo.de). Furthermore, you can buy me a coffee or beer on Paypal (paypal.me/LaLBla)! </string>

</resources>