<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="false"
    android:contextClickable="false"
    android:longClickable="false">

    <PreferenceCategory app:title="@string/timer_header">

        <SwitchPreference
            android:id="@+id/switchPrefSelectedTime"
            android:defaultValue="true"
            app:key="switchPrefSelectedTime"
            app:title="@string/timer" />

        <EditTextPreference
            android:defaultValue="true"
            android:key="editTextSelectTime"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/notification_click_to_change"
            android:title="@string/notification_time"
            app:dependency="switchPrefSelectedTime" />

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about_header">

    </PreferenceCategory>
    <EditTextPreference
        android:clickable="false"
        android:contextClickable="false"
        android:defaultValue="Default value"
        android:key="editTextAbout"
        android:longClickable="false"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/about_copyright"
        android:title="@string/about_summary"
        app:enabled="false" />

</PreferenceScreen>