<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:background="@color/colorBackground"
    tools:context=".Fragments.AddHappyThingFragment">


    <TextView
        android:id="@+id/txtAddHappyThing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/text_what_made_you_happy"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/acTextViewWhat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/question_what"
        android:inputType="textAutoCorrect|textMultiLine|textCapSentences|textAutoComplete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddHappyThing" />

    <AutoCompleteTextView
        android:id="@+id/acTextViewWith"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/question_with"
        android:inputType="textAutoCorrect|textMultiLine|textCapSentences|textAutoComplete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/acTextViewWhat" />

    <AutoCompleteTextView
        android:id="@+id/acTextViewWhere"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/question_where"
        android:inputType="textAutoCorrect|textMultiLine|textCapSentences|textAutoComplete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/acTextViewWith" />

    <AutoCompleteTextView
        android:id="@+id/acTextViewAdInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/additional_information"
        android:inputType="textAutoCorrect|textMultiLine|textCapSentences|textAutoComplete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/acTextViewWhere" />

    <EditText
        android:id="@+id/editTextWhen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="false"
        android:contextClickable="false"
        android:inputType="date|text"
        android:longClickable="false"
        android:text="@string/text_today"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnChangeDate"
        app:layout_constraintTop_toBottomOf="@+id/acTextViewAdInfo" />

    <Button
        android:id="@+id/btnChangeDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_change_date"
        android:backgroundTint="@color/colorAccent"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextWhen"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Save"
        android:backgroundTint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextWhen" />

</androidx.constraintlayout.widget.ConstraintLayout>

